@@ -5,6 +5,9 @@ Version 0.3.1:
 	  source we have for it differs in two characters.
 	- Remove some superfluous files from the distribution, which were
 	  accidentaly included from previous iterations.
+	- Use a generated script to install the required symbolic links, rather than
+	  the linkltc program. This facilitates cross-compilation, where the linkltc
+	  can not be run.
 
 Version 0.3.0:
 	New features:
